--- a/app/src/main/res/layout-land/activity_main2.xml
+++ b/app/src/main/res/layout-land/activity_main2.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     tools:openDrawer="start">
 
     <include
