--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,16 +60,16 @@
                 android:layout_marginBottom="40dp">
 
                 <EditText
-                    android:id="@+id/username"
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_column="1"
                     android:background="@drawable/button"
-                    android:drawableLeft="@drawable/icon_user"
+                    android:drawableLeft="@drawable/icon_email"
                     android:drawablePadding="20dip"
                     android:ems="10"
-                    android:hint="User name"
-                    android:inputType="textPersonName"
+                    android:hint="Email"
+                    android:inputType="textEmailAddress"
                     android:paddingEnd="20dp"
                     android:paddingStart="20dp"
                     android:singleLine="true"
