--- a/app/src/main/res/layout/content_main2.xml
+++ b/app/src/main/res/layout/content_main2.xml
@@ -8,7 +8,28 @@
     tools:context="com.project.com.project2.Main2Activity"
     tools:showIn="@layout/app_bar_main2">
     <ListView
+        android:visibility="visible"
         android:id="@+id/list_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_width="368dp"
+        android:layout_height="495dp"
+        tools:layout_editor_absoluteY="8dp"
+        tools:layout_editor_absoluteX="8dp"></ListView>
+
+    <GridView
+        android:horizontalSpacing="5dp"
+        android:verticalSpacing="10dp"
+        app:layout_goneMarginBottom="10dp"
+        android:visibility="gone"
+        android:numColumns="3"
+        android:id="@+id/grid_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
 </android.support.constraint.ConstraintLayout>
