--- a/app/src/main/res/menu/main2.xml
+++ b/app/src/main/res/menu/main2.xml
@@ -2,6 +2,16 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/action_view_list"
+        android:orderInCategory="5"
+        android:title="@string/view_list"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_view_grid"
+        android:orderInCategory="6"
+        android:title="@string/view_grid"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="@string/logout"
